<resources>
    <string name="app_name">Color_Memory</string>
    <string name="textTitreMainActivity">Color Memory</string>
    <string name="textBoutonRegle">Regles</string>
    <string name="textRadioFacile">Facile</string>
    <string name="textRadioDifficile">Difficile</string>
    <string name="textRadioExpert">Expert</string>
    <string name="textRadioChrono">Chrono</string>
    <string name="textBoutonJouer">JOUER</string>
    <string name="textNombreDeVies">Nombre de vies :</string>
    <string name="textScore">Score :</string>
    <string name="textNivDifficulter">Niveau :</string>
    <string name="textButtonCredit">Credit</string>
    <string name="textResultatWin">Gagner!</string>
    <string name="textResultatlose">Perdu..</string>
    <string name="textNiveauActuel">0</string>
    <string name="textScoreActuel">0</string>
    <string name="textVie">2</string>


    <!-- main activity resources -->
    <string name="congrat_you_are_authenticate">Congrat, you are authenticate !</string>

    <!-- toast message -->
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="reset_password_fail">Failed to send reset email!</string>
    <string name="reset_password_success">We have sent you instructions to reset your password!</string>
    <string name="adress_missing">Enter email address!</string>
    <string name="passwordMissing">Enter password!</string>
    <string name="email_missing">\"Enter your registered email id\"</string>
    <string name="email_empty">Enter email address!</string>
    <string name="password_empty">Enter password!</string>

    <!-- Placeholders -->
    <string name="hint_email">Email</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_password">Password</string>

    <!-- btn content -->
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_change">Change</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_lancement">Lancer</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>

    <!-- label text -->
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>
